Represent SUBJ_ID in the tree as special concept.

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -257,7 +257,7 @@
 			},
 			"codeleaf" : {
 				"icon" : "/static/img/tree/code.png",
-				"valid_children" : "none"
+				"valid_children" : "alpha"
 			},
 		},
 		'sort': function (a, b) {
