--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -30,48 +30,69 @@
 
   <div id="treediv"></div>
 
-	<p>
-        <button id="embeded_return">Save and return to Jupyter</button>
-    </p>
-	<p id="feedbacksave"></p>
-
-  <form id="datanodedetails" class="blockform">
+      <form id="datanodedetails" class="blockform" >
 		<fieldset>
 			<legend>Data node details</legend>
 			<p>
-				<label for="datalabel">Data Label</label>
+				<label for="datalabel">Label</label>
 				<input type="text" name="datalabel" required />
 			</p>
 			<p>
 				<label for="nodetype">Node type</label>
-				<select name="nodetype">
+				<select name="nodetype" disabled>
 					<option value="default">Folder</option>
 					<option value="numeric">Numerical</option>
-					<option value="alpha">Categorical</option>
+					<option value="alpha">Categorical Value</option>
+					<option value="tag">Metadata tag</option>
+					<option value="categorical">Categorical</option>
 					<option value="highdim">High-dimensional</option>
 					<option value="codeleaf">Special concept</option>
 				</select>
 			</p>
-			<p>
+			<p hidden class="clinicaldata">
 				<label for="filename">Filename</label>
-				<input class="clinicaldata" type="text" name="filename" />
+				<input disabled type="text" name="filename" />
 			</p>
-			<p>
+			<p hidden class="clinicaldata">
 				<label for="columnnumber">Column Number</label>
-				<input class="clinicaldata" type="text" name="columnnumber" />
+				<input disabled type="text" name="columnnumber" />
 			</p>
-			<p>
-				<label for="datalabelsource">Data Label Source</label>
-				<input class="clinicaldata" type="text" name="datalabelsource" />
+			<p hidden class="clinicaldata" >
+				<label for="datalabelsource">Magic #5 </label>
+				<input type="text" name="datalabelsource" />
 			</p>
-			<p>
-				<label for="controlvocabcd">Control Vocab Cd</label>
-				<input class="clinicaldata" type="text" name="controlvocabcd" />
+			<p hidden class="clinicaldata" >
+				<label for="controlvocabcd">Magic #6</label>
+				<input type="text" name="controlvocabcd" />
 			</p>
+            <div hidden id="tagbox" class="tagdata">
+                <!--Here should come some code that lets you add tags dynamically-->
+                <p>
+                <input type="text" name="tag_tit1" />
+				<input type="text" name="tag_desc1" />
+                <input type="number" name="tag_weight1"  min="1" max="10" />
+                </p><p>
+                <input type="text" name="tag_tit2" />
+				<input type="text" name="tag_desc2" />
+                <input type="number" name="tag_weight2"  min="1" max="10" />
+                </p><p>
+                <input type="text" name="tag_tit3" />
+				<input type="text" name="tag_desc3" />
+                <input type="number" name="tag_weight3"  min="1" max="10" />
+                </p><p>
+                <input type="text" name="tag_tit4" />
+				<input type="text" name="tag_desc4" />
+                <input type="number" name="tag_weight4"  min="1" max="10" />
+                </p>
+            </div>
+
 			<input type="submit" value="Apply changes" />
 			<span style="float: right; padding-right: 5px;" id="feedback"></span>
 		</fieldset>
 	</form>
+
+    <p><button id="embeded_return">Save and return to Jupyter</button></p>
+	<p id="feedbacksave"></p>
 
 	<script src="/static/jstree/dist/jstree.min.js"></script>
 
@@ -166,16 +187,22 @@
 			node.data['Column Number']      = $( "input[name='columnnumber']"     ).val();
 			node.data['Data Label Source']  = $( "input[name='datalabelsource']"  ).val();
 			node.data['Control Vocab Cd']   = $( "input[name='controlvocabcd']"   ).val();
+			node.data['tag_description']    = $( "input[name='tag_description']"  ).val();
 			if (updated) {feedback("Successfully applied", false)}
 		} else {feedback("No node selected", true)}
 	});
 
 	function enableRightFields(type){
-		if (type != 'default') {
-			$('.clinicaldata').prop('disabled', false);
-		} else {
-			$('.clinicaldata').prop('disabled', true);
-		}
+		if (type == 'numeric' | type == 'categorical'){
+			$('.clinicaldata').prop('hidden', false);
+			$('.tagdata').prop('hidden', true);
+        } else if (type == 'tag'){
+            $('.tagdata').prop('hidden', false);
+            $('.clinicaldata').prop('hidden', true);
+        } else {
+            $('.tagdata').prop('hidden', true);
+            $('.clinicaldata').prop('hidden', true);
+        }
 	}
 
 	function feedback(string, error) {
@@ -212,6 +239,24 @@
 			if (typeof node.data['Control Vocab Cd'] !== 'undefined') {
 				$( "input[name='controlvocabcd']" ).val(node.data['Control Vocab Cd']);
 			}
+            if (typeof node.data['tags'] !== 'undefined') {
+
+                var counter = 0;
+
+                for (var key in node.data.tags) {
+                    if (node.data.tags.hasOwnProperty(key)) {
+                        counter++
+                        var c = counter.toString()
+                        var tit =  '[name="' + 'tag_tit' + c + '"]'
+                        var desc = '[name="' + 'tag_desc' + c + '"]'
+                        var weight = '[name="' + 'tag_weight' + c + '"]'
+                        $( tit ).val(key);
+                        $( desc ).val(node.data.tags[key][0]);
+                        $( weight ).val(node.data.tags[key][1]);
+
+                    }
+                }
+		    }
 		}
 	})
 	// create the instance
@@ -229,10 +274,18 @@
                         return true;
                  }
         },
+
+
 		"types" : {
 			"default" : {
 				"icon" : "/static/img/tree/folder.gif",
-				"valid_children" : ["alpha", "numeric", "highdim", "codeleaf", "default", "categorical"]
+				"valid_children" : ["alpha",
+									"numeric",
+									"highdim",
+									"codeleaf",
+									"default",
+									"categorical",
+									"tag"]
 			},
 			"study" : {
 				"icon" : "/static/img/tree/study.png",
@@ -240,24 +293,28 @@
 			},
 			"alpha" : {
 				"icon" : "/static/img/tree/alpha.gif",
-				"valid_children" : "none"
+				"valid_children" : ["tag"]
 			},
 			"categorical" : {
-			    "max_depth" : "1",
+			    "max_depth" : "2",
 				"icon" : "/static/img/tree/folder.gif",
-				"valid_children" : "alpha"
+				"valid_children" : ["alpha", "tag"]
 			},
 			"numeric" : {
 				"icon" : "/static/img/tree/numeric.gif",
-				"valid_children" : "none"
+				"valid_children" : ["tag"]
 			},
 			"highdim" : {
 				"icon" : "/static/img/tree/dna_icon.png",
+				"valid_children" : ["tag"]
+			},
+			"tag" : {
+				"icon" : "/static/img/tree/tag_icon.png",
 				"valid_children" : "none"
 			},
 			"codeleaf" : {
 				"icon" : "/static/img/tree/code.png",
-				"valid_children" : "alpha"
+				"valid_children" : ["alpha", "tag"]
 			},
 		},
 		'sort': function (a, b) {
@@ -265,11 +322,15 @@
 				return -1;
 			} else if ((this.get_type(a) != 'default') && (this.get_type(b) == 'default')) {
 				return 1;
+			} else if ((this.get_type(a) == 'tag') && (this.get_type(b) != 'tag')) {
+				return -1;
+			} else if ((this.get_type(a) != 'tag') && (this.get_type(b) == 'tag')) {
+				return 1;
 			} else {
 				return this.get_text(a) > this.get_text(b) ? 1 : -1;
 			}
 		},
-		"plugins" : [ "dnd", "sort", "contextmenu", "types" ]
+		"plugins" : [ "dnd", "sort", "contextmenu", "types", "unique" ]
 	});
 
 	</script>
