--- a/tmtk/arborist/templates/tree.html
+++ b/tmtk/arborist/templates/tree.html
@@ -57,21 +57,21 @@
             <div hidden id="tagbox" class="tagdata">
                 <!--Here should come some code that lets you add tags dynamically-->
                 <p>
-                <input type="text" name="tag_tit1" />
-				<input type="text" name="tag_desc1" />
-                <input type="number" name="tag_weight1"  min="1" max="10" />
+                    <input type="text" name="tag_tit1" class="tag_title" />
+                    <input type="text" name="tag_desc1" class="tag_desc" />
+                    <input type="number" name="tag_weight1"  min="1" max="10" class="tag_weight" />
                 </p><p>
-                <input type="text" name="tag_tit2" />
-				<input type="text" name="tag_desc2" />
-                <input type="number" name="tag_weight2"  min="1" max="10" />
+                    <input type="text" name="tag_tit2" class="tag_title"/>
+                    <input type="text" name="tag_desc2" class="tag_desc" />
+                    <input type="number" name="tag_weight2"  min="1" max="10" class="tag_weight" />
                 </p><p>
-                <input type="text" name="tag_tit3" />
-				<input type="text" name="tag_desc3" />
-                <input type="number" name="tag_weight3"  min="1" max="10" />
+                    <input type="text" name="tag_tit3" class="tag_title" />
+                    <input type="text" name="tag_desc3" class="tag_desc" />
+                    <input type="number" name="tag_weight3"  min="1" max="10" class="tag_weight" />
                 </p><p>
-                <input type="text" name="tag_tit4" />
-				<input type="text" name="tag_desc4" />
-                <input type="number" name="tag_weight4"  min="1" max="10" />
+                    <input type="text" name="tag_tit4" class="tag_title" />
+                    <input type="text" name="tag_desc4" class="tag_desc" />
+                    <input type="number" name="tag_weight4"  min="1" max="10" class="tag_weight" />
                 </p>
             </div>
 
@@ -160,8 +160,15 @@
 
 	$("form#datanodedetails").submit(function (e) {
 		e.preventDefault();
+        if (node.type == 'tag') {
 
-		if (typeof node != 'undefined') {
+            for (i = 1; i < 5; i++) {
+                var title  = $( "input[name='tag_tit" + i  + "']"         ).val();
+                var desc   = $( "input[name='tag_desc" + i  + "']"         ).val();
+                var weight = $( "input[name='tag_weight" + i  + "']"         ).val();
+                node.data.tags[title] = [desc, weight]
+            }
+		} else if (typeof node != 'undefined') {
 
 			var text = $( "input[name='datalabel']" ).val();
 			var updated = $("#treediv").jstree('rename_node', node , text );
@@ -251,6 +258,33 @@
 		    }
 		}
 	})
+    .bind("create.jstree", function (e, data) {
+
+    //if creating a root node
+    if(!$(data.rslt.parent).attr("id")) var id = 1;
+    //else get parent
+    else var id = data.rslt.parent.attr("id").replace("node_","");
+    $.post(
+        ajaxurl,
+        {
+            "action" : "fma_create_node",
+            "operation" : "create_node",
+            "id" : id,
+            "position" : data.rslt.position,
+            "title" : data.rslt.name,
+            "type" : data.rslt.obj.attr("rel")
+        },
+        function (r) {
+            if(r.status) {
+                $(data.rslt.obj).attr("id", "node_" + r.id);
+            }
+            else {
+                $.jstree.rollback(data.rlbk);
+            }
+        },
+        'json'
+        );
+    })
 	// create the instance
 	.jstree({
 		'core' : {
@@ -266,6 +300,27 @@
                         return true;
                  }
         },
+         "contextmenu" : {
+            items : { // Could be a function that should return an object like this one
+                "create_folder" : {
+                            "seperator_before" : false,
+                            "seperator_after" : false,
+                            "label" : "Create Node",
+                            action : function (obj) {
+                                 this.create_node(obj, "last", {"attr" : {"rel" : "default"}});
+                            }
+                        },
+                "add_tag" : {
+                            "seperator_before" : false,
+                            "seperator_after" : true,
+                            "label" : "Add tags",
+                            action : function (obj) {
+                                this.create_node(obj, "last", {"attr" : { "rel" : "tag"}});
+                    }
+                }
+            }
+        },
+
 		"types" : {
 			"default" : {
 				"icon" : "/static/img/tree/folder.gif",
