--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -170,14 +170,13 @@
 
 	$("form#datanodedetails").submit(function (e) {
 		e.preventDefault();
-
         if (node.type == 'tag') {
+
             for (i = 1; i < 5; i++) {
                 var title  = $( "input[name='tag_tit" + i  + "']"         ).val();
                 var desc   = $( "input[name='tag_desc" + i  + "']"         ).val();
                 var weight = $( "input[name='tag_weight" + i  + "']"         ).val();
                 node.data.tags[title] = [desc, weight]
-                if (updated) {feedback("Successfully applied", false)}
             }
 		} else if (typeof node != 'undefined') {
 
@@ -195,19 +194,21 @@
 			node.data['Column Number']      = $( "input[name='columnnumber']"     ).val();
 			node.data['Data Label Source']  = $( "input[name='datalabelsource']"  ).val();
 			node.data['Control Vocab Cd']   = $( "input[name='controlvocabcd']"   ).val();
-			node.data['tag_description']    = $( "input[name='tag_description']"  ).val();
 			if (updated) {feedback("Successfully applied", false)}
 		} else {feedback("No node selected", true)}
 	});
 
 	function enableRightFields(type){
 		if (type == 'numeric' | type == 'categorical'){
+            $('.label').prop('hidden', false);
 			$('.clinicaldata').prop('hidden', false);
 			$('.tagdata').prop('hidden', true);
         } else if (type == 'tag'){
             $('.tagdata').prop('hidden', false);
             $('.clinicaldata').prop('hidden', true);
+            $('.label').prop('hidden', true);
         } else {
+            $('.label').prop('hidden', false);
             $('.tagdata').prop('hidden', true);
             $('.clinicaldata').prop('hidden', true);
         }
@@ -226,6 +227,76 @@
 			})
 		}, 2000);
 	}
+
+    function customMenu(node) {
+    // The default set of all items
+    var items = {
+        createItem: { // The "create" menu item
+            label: "Create node",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                inst.create_node(obj, {}, "last", function (new_node) {
+                    new_node.data = {file: true};
+                    setTimeout(function () { inst.edit(new_node); },0);
+                });
+            }
+        },
+        addTags: { // The "Add tags" menu item
+            label: "Add tags",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                var tag_specs = {type: 'tag',
+                                 text: 'Tags',
+                                 data: { // This is added to prevent GUI error for Filename
+                                    'Filename': '',
+                                    'tags': {}
+                                 }
+                    }
+                inst.create_node(obj, tag_specs, "last", function (new_node) {
+
+                setTimeout(function () { inst.selected(new_node); },0);
+                });
+            }
+        },
+        renameItem: { // The "rename" menu item
+            label: "Rename",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                inst.edit(obj);
+            }
+        },
+        deleteItem: { // The "delete" menu item
+            label: "Delete",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                if(inst.is_selected(obj)) {
+                    inst.delete_node(inst.get_selected());
+                }
+                else {
+                    inst.delete_node(obj);
+                }
+            }
+        }
+    };
+
+/* // Select here what options to show for which nodes to show what options.
+    if (node.data.file) {
+        delete items.createItem;
+    }
+
+    else{
+        delete items.deleteItem;
+        delete items.renameItem;
+    }
+*/
+    return items;
+}
+
+
 
 	// Create the tree
 	$('#treediv')
@@ -247,6 +318,8 @@
 			if (typeof node.data['Control Vocab Cd'] !== 'undefined') {
 				$( "input[name='controlvocabcd']" ).val(node.data['Control Vocab Cd']);
 			}
+
+			// This (ugly) way to add multiple tags to 'tags' dictionary in 'data'
             if (typeof node.data['tags'] !== 'undefined') {
 
                 var counter = 0;
@@ -282,7 +355,7 @@
                         return true;
                  }
         },
-
+         "contextmenu" : {items : customMenu},
 
 		"types" : {
 			"default" : {
@@ -326,20 +399,20 @@
 			},
 		},
 		'sort': function (a, b) {
-			if ((this.get_type(a) == 'default') && (this.get_type(b) != 'default')) {
-				return -1;
-			} else if ((this.get_type(a) != 'default') && (this.get_type(b) == 'default')) {
-				return 1;
-			} else if ((this.get_type(a) == 'tag') && (this.get_type(b) != 'tag')) {
+			if ((this.get_type(a) == 'tag') && (this.get_type(b) != 'tag')) {
 				return -1;
 			} else if ((this.get_type(a) != 'tag') && (this.get_type(b) == 'tag')) {
+				return 1;
+            } else if ((this.get_type(a) == 'default') && (this.get_type(b) != 'default')) {
+				return -1;
+			} else if ((this.get_type(a) != 'default') && (this.get_type(b) == 'default')) {
 				return 1;
 			} else {
 				return this.get_text(a) > this.get_text(b) ? 1 : -1;
 			}
 		},
-		"plugins" : [ "dnd", "sort", "contextmenu", "types", "unique", "wholerow"]
+		"plugins" : [ "dnd", "sort", "contextmenu", "types", "unique", "wholerow" ]
 	});
 
 	</script>
-	{% endblock %}
+{% endblock %}
