--- a/tmtk/arborist/templates/tree.html
+++ b/tmtk/arborist/templates/tree.html
@@ -218,6 +218,75 @@
 		}, 2000);
 	}
 
+    function customMenu(node) {
+    // The default set of all items
+    var items = {
+        createItem: { // The "create" menu item
+            label: "Create node",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                inst.create_node(obj, {}, "last", function (new_node) {
+                    new_node.data = {file: true};
+                    setTimeout(function () { inst.edit(new_node); },0);
+                });
+            }
+        },
+        addTags: { // The "Add tags" menu item
+            label: "Add tags",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                var tag_specs = {type: 'tag',
+                                 text: 'Tags',
+                                 data: { // This is added to prevent GUI error for Filename
+                                    'Filename': '',
+                                 }
+                    }
+                inst.create_node(obj, tag_specs, "last", function (new_node) {
+
+                setTimeout(function () { inst.selected(new_node); },0);
+                });
+            }
+        },
+        renameItem: { // The "rename" menu item
+            label: "Rename",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                inst.edit(obj);
+            }
+        },
+        deleteItem: { // The "delete" menu item
+            label: "Delete",
+            action: function (data) {
+                var inst = $.jstree.reference(data.reference),
+                    obj = inst.get_node(data.reference);
+                if(inst.is_selected(obj)) {
+                    inst.delete_node(inst.get_selected());
+                }
+                else {
+                    inst.delete_node(obj);
+                }
+            }
+        }
+    };
+
+/* // Select here what options to show for which nodes to show what options.
+    if (node.data.file) {
+        delete items.createItem;
+    }
+
+    else{
+        delete items.deleteItem;
+        delete items.renameItem;
+    }
+*/
+    return items;
+}
+
+
+
 	// Create the tree
 	$('#treediv')
 	// listen for event
@@ -238,6 +307,8 @@
 			if (typeof node.data['Control Vocab Cd'] !== 'undefined') {
 				$( "input[name='controlvocabcd']" ).val(node.data['Control Vocab Cd']);
 			}
+
+			// This (ugly) way to add multiple tags to 'tags' dictionary in 'data'
             if (typeof node.data['tags'] !== 'undefined') {
 
                 var counter = 0;
@@ -258,33 +329,6 @@
 		    }
 		}
 	})
-    .bind("create.jstree", function (e, data) {
-
-    //if creating a root node
-    if(!$(data.rslt.parent).attr("id")) var id = 1;
-    //else get parent
-    else var id = data.rslt.parent.attr("id").replace("node_","");
-    $.post(
-        ajaxurl,
-        {
-            "action" : "fma_create_node",
-            "operation" : "create_node",
-            "id" : id,
-            "position" : data.rslt.position,
-            "title" : data.rslt.name,
-            "type" : data.rslt.obj.attr("rel")
-        },
-        function (r) {
-            if(r.status) {
-                $(data.rslt.obj).attr("id", "node_" + r.id);
-            }
-            else {
-                $.jstree.rollback(data.rlbk);
-            }
-        },
-        'json'
-        );
-    })
 	// create the instance
 	.jstree({
 		'core' : {
@@ -300,26 +344,7 @@
                         return true;
                  }
         },
-         "contextmenu" : {
-            items : { // Could be a function that should return an object like this one
-                "create_folder" : {
-                            "seperator_before" : false,
-                            "seperator_after" : false,
-                            "label" : "Create Node",
-                            action : function (obj) {
-                                 this.create_node(obj, "last", {"attr" : {"rel" : "default"}});
-                            }
-                        },
-                "add_tag" : {
-                            "seperator_before" : false,
-                            "seperator_after" : true,
-                            "label" : "Add tags",
-                            action : function (obj) {
-                                this.create_node(obj, "last", {"attr" : { "rel" : "tag"}});
-                    }
-                }
-            }
-        },
+         "contextmenu" : {items : customMenu},
 
 		"types" : {
 			"default" : {
@@ -363,13 +388,13 @@
 			},
 		},
 		'sort': function (a, b) {
-			if ((this.get_type(a) == 'default') && (this.get_type(b) != 'default')) {
-				return -1;
-			} else if ((this.get_type(a) != 'default') && (this.get_type(b) == 'default')) {
-				return 1;
-			} else if ((this.get_type(a) == 'tag') && (this.get_type(b) != 'tag')) {
+			if ((this.get_type(a) == 'tag') && (this.get_type(b) != 'tag')) {
 				return -1;
 			} else if ((this.get_type(a) != 'tag') && (this.get_type(b) == 'tag')) {
+				return 1;
+            } else if ((this.get_type(a) == 'default') && (this.get_type(b) != 'default')) {
+				return -1;
+			} else if ((this.get_type(a) != 'default') && (this.get_type(b) == 'default')) {
 				return 1;
 			} else {
 				return this.get_text(a) > this.get_text(b) ? 1 : -1;
