--- a/tmtk/arborist/templates/tree.html
+++ b/tmtk/arborist/templates/tree.html
@@ -16,8 +16,9 @@
   	</form></li>
   </ul>
 
+  <div id="treeanddetails">
   <div id="treediv"></div>
-
+  <div id="details">
       <form id="datanodedetails" class="blockform" >
 		<fieldset>
 			<legend>Data node details</legend>
@@ -80,6 +81,8 @@
 			<span style="float: right; padding-right: 5px;" id="feedback"></span>
 		</fieldset>
 	</form>
+	</div>
+	</div>
 
     <p><button id="save">Save column mapping file</button></p>
         <p id="feedbacksave"></p>
